Mon Apr  7 08:09:08 BST 2003  Colin Watson  <cjwatson@debian.org>

	* include/Defines.in: Generate dependencies in .depend rather than
	  the current directory. Suppress echoing of dependency generation
	  commands.
	* libdb/Makefile.in: Remove .depend directory on distclean. Always
	  use dependencies (except on clean), not just when --enable-debug
	  was passed to configure.
	* src/Makefile.in: Likewise. Set up $(DEFS_*) variables so that the
	  correct flags are used when generating dependencies.
	* libdb/.cvsignore, src/.cvsignore: Ignore .depend.

	* configure.in: Remove now-redundant --enable-debug option. Remove
	  search for libefence if --enable-debug is used; using it with
	  LD_PRELOAD is generally more convenient anyway.
	* README, manual/intro.me (Arguments to configure): Remove
	  documentation for --enable-debug.
	* docs/NEWS: Document the removal.

Mon Apr  7 01:02:27 BST 2003  Colin Watson  <cjwatson@debian.org>

	* man/ja_JP.eucJP/man1/man.man1: Replace "%date%" with the Japanese
	  "ima", meaning "now" or "the present time" (thanks, Liyang Hu).

Mon Apr  7 00:04:30 BST 2003  Colin Watson  <cjwatson@debian.org>

	* configure.in: Don't generate language-specific date variants for
	  man pages, as that requires all the relevant locales to be
	  installed on the build machine. Use the ISO 8601 date format
	  instead.
	* include/Defines.in: Remove obsolete substitutions of date_it,
	  date_es, date_de, and date_fr.
	* man/Makefile.in: Likewise.
	* man/de_DE.88591/man1/*.man1, man/de_DE.88591/man5/*.man5,
	  man/de_DE.88591/man8/*.man8, man/es_ES.88591/man1/*.man1,
	  man/es_ES.88591/man5/*.man5, man/es_ES.88591/man8/*.man8,
	  man/it_IT.88591/man1/*.man1, man/it_IT.88591/man5/*.man5,
	  man/it_IT.88591/man8/*.man8 (.TH): Replace "%date_de%",
	  "%date_es%", and "%date_it%" substitutions by plain "%date%".
	* man/man1/man.man1 (HISTORY): "%date%" -> "present day".
	* man/it_IT.88591/man1/man.man1 (STORIA): Similarly, "%date_it%" ->